# lotus-ref

./: .gitignore  PLAN.md  ROADMAP.md  TODO.md  UI_PLAN.md  pyproject.toml
.github/: copilot-instructions.md
app/: chat_routes.py  document_service.py  main.py  routes.py
app/static/: index.html
app/static/assets/: index-D12yj5IF.css  index-Dh0WHiR5.js
data/cfg/: mycell.af.dcfg  mycell.mutex.dcfg
data/spice/: mycell.sp
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend-reference/: index.html  vite.config.ts
frontend-reference/lotus_v2_copy/: README.md  package-lock.json  package.json
frontend-reference/src/: App.tsx  index.css
frontend/src/: App.tsx  globals.css  index.css  vite-env.d.ts
frontend/src/api/: chat.ts  (+3 more)
src/core/: __init__.py  commands.py  conflict_store.py  document.py  document_commands.py  document_line.py  document_type.py  errors.py  interfaces.py  line_status.py  net_spec.py  validation_result.py
src/doc_types/: __init__.py
src/infrastructure/: __init__.py  document_io.py  registrations.py  registry.py
src/nqs/: __init__.py  netlist_database.py  netlist_query_service.py  spice_nqs.py
src/services/: __init__.py  chat_service.py  document_service.py
tests/: conftest.py  mock_nqs.py  test_document_service.py  test_nqs.py  test_spice_nqs.py
tests/core/: test_commands.py  test_conflict_store.py  test_document.py
tests/infrastructure/: test_document_io.py
tests/integration/: test_af_integration.py  test_mutex_integration.py
tests/services/: test_document_service.py
(+126 files in other folders)
